properties endpoints working